frontend/src/assets/styles/global.css
* {
  font-family:
    var(--bcds-typography-font-families-bc-sans), sans-serif !important;
}

a {
  color: rgb(var(--v-theme-primary));
  text-decoration: none;
}

a:hover {
  color: rgb(var(--v-theme-primary-hover));
  text-decoration: underline;
}

h1 {
  font: var(--bcds-typography-bold-h1);
}

h2 {
  font: var(--bcds-typography-bold-h2);
}

h3 {
  font: var(--bcds-typography-bold-h3);
}

h4 {
  font: var(--bcds-typography-bold-h4);
}

h5 {
  font: var(--bcds-typography-bold-h5);
}

h6 {
  font: var(--bcds-typography-bold-h6);
}

p {
  font: var(--bcds-typography-regular-body);
}

.p-label {
  font: var(--bcds-typography-regular-label);
}

.p-large {
  font: var(--bcds-typography-regular-large-body);
}

.p-small {
  font: var(--bcds-typography-regular-small-body);
}

.v-input.v-input--disabled .v-input__control {
  background-color: rgb(var(--v-theme-surface-input-disabled)) !important;
}

